--- a/photos/templates/base.html
+++ b/photos/templates/base.html
@@ -15,14 +15,21 @@
     {% bootstrap_css %}
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
   {% endblock %}
-  
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&display=swap" rel="stylesheet">
+    <style>
+      body {
+        font-family: 'Open Sans Condensed', sans-serif;
+        text-shadow: 4px 4px 4px #aaa;
+      }
+    </style>
 </head>
 
 </head>
 <body>
     {% include "navbar.html" %}
 
-    {% block content %} <h1 class='text-center'>BEST HISTORY IMAGES </h1> {%endblock%}
+    {% block content %} <h1 class='text-center' style="border: 1px solid;border-radius:5px;padding: 10px;
+    box-shadow: 5px 10px #888888;">BEST HISTORY IMAGES </h1> {%endblock%}
 
     {% block scripts %}
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
