--- a/photos/templates/home.html
+++ b/photos/templates/home.html
@@ -13,11 +13,24 @@
     }
     </script>
 </head>  
-    <div class="container">
+    <div class="container-fluid">
+        <!-- <div class="row">
+            <h1>Locations</h1>
+            {% for location in location %}
+            <div class="col-md-6">
+                <div class="btn btn-outline-default">
+                    <p><a href="/location/{{location.id}}">{{location.location}}</a></p>
+                    {% empty %}
+                    <h4>There are no locations</h4>
+                </div>
+            </div>
+            {% endfor %} 
+        </div> -->
         <div class="row">
             {% for image in images %}
+            {% if image.id <= 6 %}
             <div class="col-lg-4 col-lg-4 col-lg-4 padding-0 hover ">
-                <img src="{{image.image.url}}" class=" img img-responsive" data-toggle="modal" data-target="#{{image.id}}">
+                <img src="{{image.image.url}}" class=" img img-responsive img-thumbnail" style="height: 350px; width:450px; margin-bottom: 10px; padding: 10px;box-shadow: 5px 10px #888888;" data-toggle="modal" data-target="#{{image.id}}">
             </div>
             <div class="modal fade" id="{{image.id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered" role="document">
@@ -32,7 +45,7 @@
                         </div>
                         <div class="text-center">
                             <blockquote class="blockquote text-center">
-                                <p class="mb-0">image.image_description</p>
+                                <p class="mb-0">{{image.image_description}}</p>
                                 <footer class="blockquote-footer">Location:{{image.location}} <cite title="Source Title">Posted On: {{image.pub_date}}</cite></footer>
                             </blockquote>
                         </div>
@@ -53,7 +66,32 @@
                 </div>
             </div>
         </div>
+        {% endif %}
         {% endfor %}
     </div>
+    <div class="container-fluid">
+        <div class="row text-center ">
+            <nav aria-label="Page navigation example">
+                <ul class="pagination">
+                    <li class="page-item">
+                        <a class="page-link" href="#" aria-label="Previous">
+                            <span aria-hidden="true">&laquo;</span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                    </li>
+                    <li class="page-item"><a class="page-link" href="{% url 'home' %}">1</a></li>
+                    <li class="page-item"><a class="page-link" href="{% url 'home1' %}">2</a></li>
+                    <li class="page-item"><a class="page-link" href="{% url 'home2' %}">3</a></li>
+                    <li class="page-item">
+                    <a class="page-link" href="#" aria-label="Next">
+                        <span aria-hidden="true">&raquo;</span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                    </li>
+                </ul>
+            </nav>             
+        </div>
+    </div>
+    
 {% endblock %}
 
