--- a/photos/templates/home2.html
+++ b/photos/templates/home2.html
@@ -1,19 +1,24 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="container">
-    <div class="row">
-        {% if images %}
-        <h2> Found {{images|length}} images for the search term "{{message}}"</h2>
-        {% else %}
-        <h2> Found 0 images for the search term "{{message}}"</h2>
-        {% endif %}
-    </div>
-    <div class="row">
-        {% if images %}
+{{block.super}}
+
+<head>
+    <script src="https://cdn.jsdelivr.net/clipboard.js/1.5.3/clipboard.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="crossorigin="anonymous"></script>
+    <script>
+    function copyToClipboard(element) {
+        $(element).select();
+        document.execCommand("copy");
+    }
+    </script>
+</head>  
+    <div class="container-fluid">
+        <div class="row">
             {% for image in images %}
+            {% if image.id > 12 and image.id <= 15 %}
             <div class="col-lg-4 col-lg-4 col-lg-4 padding-0 hover ">
-                <img src="{{image.image.url}}" class=" img img-responsive img-thumbnail" style="height: 350px; width:450px; margin-bottom: 10px; padding: 10px;box-shadow: 5px 10px #888888;" data-toggle="modal" data-target="#{{image.id}}">
+                <img src="{{image.image.url}}" class=" img img-responsive img-thumbnail" data-toggle="modal" data-target="#{{image.id}}">
             </div>
             <div class="modal fade" id="{{image.id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered" role="document">
@@ -48,31 +53,33 @@
                     </div>
                 </div>
             </div>
-            {% endfor %}
+        </div>
         {% endif %}
+        {% endfor %}
     </div>
-</div>
-<div class="container-fluid">
-    <div class="row text-center ">
-        <nav aria-label="Page navigation example">
-            <ul class="pagination">
-                <li class="page-item">
-                    <a class="page-link" href="#" aria-label="Previous">
-                        <span aria-hidden="true">&laquo;</span>
-                        <span class="sr-only">Previous</span>
+    <div class="container-fluid">
+        <div class="row text-center ">
+            <nav aria-label="Page navigation example">
+                <ul class="pagination">
+                    <li class="page-item">
+                        <a class="page-link" href="#" aria-label="Previous">
+                            <span aria-hidden="true">&laquo;</span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                    </li>
+                    <li class="page-item"><a class="page-link" href="{% url 'home' %}">1</a></li>
+                    <li class="page-item"><a class="page-link" href="{% url 'home1' %}">2</a></li>
+                    <li class="page-item"><a class="page-link" href="{% url 'home2' %}">3</a></li>
+                    <li class="page-item">
+                    <a class="page-link" href="#" aria-label="Next">
+                        <span aria-hidden="true">&raquo;</span>
+                        <span class="sr-only">Next</span>
                     </a>
-                </li>
-                <li class="page-item"><a class="page-link" href="{% url 'home' %}">1</a></li>
-                <li class="page-item"><a class="page-link" href="{% url 'home1' %}">2</a></li>
-                <li class="page-item"><a class="page-link" href="{% url 'home2' %}">3</a></li>
-                <li class="page-item">
-                <a class="page-link" href="#" aria-label="Next">
-                    <span aria-hidden="true">&raquo;</span>
-                    <span class="sr-only">Next</span>
-                </a>
-                </li>
-            </ul>
-        </nav>             
+                    </li>
+                </ul>
+            </nav>             
+        </div>
     </div>
-</div>
+    
 {% endblock %}
+
