--- a/photos/templates/location.html
+++ b/photos/templates/location.html
@@ -4,9 +4,9 @@
 <div class="container">
     <div class="row">
         {% if images %}
-        <h2> Found {{images|length}} images for the search term "{{message}}"</h2>
+        <h2> Showing {{images|length}} images for the location "{{title}}"</h2>
         {% else %}
-        <h2> Found 0 images for the search term "{{message}}"</h2>
+        <h2> Found 0 images for the location "{{title}}"</h2>
         {% endif %}
     </div>
     <div class="row">
