--- a/photos/templates/navbar.html
+++ b/photos/templates/navbar.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <head>
-    <!-- <title>navbar example</title> -->
+    <title>navbar example</title> 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -16,7 +16,6 @@
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="#">Home <span class="sr-only">(current)</span></a></li>
                     
-                    <!-- First dropdown menu here-->
                     <li class="dropdown">
                         <p class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Location<span class="caret"></span></p>
                         <ul class="dropdown-menu">
@@ -26,7 +25,6 @@
                             <li><p>Select</p></li>
                         </ul>
                     </li>
-                    <!-- Dropdown ending here-->
                 </ul>
                 <form class="navbar-form navbar-right" role="search">
                     <div class="form-group">
@@ -34,8 +32,54 @@
                     </div>
                     <button type="submit" class="btn btn-info">Go</button>
                 </form>
-            </div><!-- /.navbar-collapse -->
-        </div><!-- /.container-fluid -->
+            </div>
+        </div>
     </nav>
 </body>
+</html>  -->
+<!DOCTYPE html>
+<html>
+<head>
+    <title>navbar example</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&display=swap" rel="stylesheet">
+    <style>
+      body {
+        font-family: 'Open Sans Condensed', sans-serif;
+        font-size: 25px;
+        text-shadow: 4px 4px 4px #aaa;
+      }
+    </style>
+</head>
+<body>
+
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a></li>
+        <!-- <li><a href="{% url 'home' %}">Nairobi </a></li>
+        <li><a href="{% url 'home' %}">Nandi </a></li>
+        <li><a href="{% url 'home' %}">Nyeri </a></li>
+        <li><a href="{% url 'home' %}">Mombasa </a></li> -->
+        <!-- First dropdown menu here-->
+        
+        <!-- Dropdown ending here-->
+      </ul>
+      <form class="navbar-form navbar-right" role="search" action="{% url 'search_by_category' %}">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Search People or Places ">
+        </div>
+        <button type="submit" class="btn btn-outline-default">Go</button>
+      </form>
+
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+</div>
+</body>
 </html>
+
