--- a/photos/templates/base.html
+++ b/photos/templates/base.html
@@ -29,7 +29,7 @@
     {% include "navbar.html" %}
 
     {% block content %} <h1 class='text-center' style="border: 1px solid;border-radius:5px;padding: 10px;
-    box-shadow: 5px 10px #888888;">BEST HISTORY IMAGES </h1> {%endblock%}
+    box-shadow: 5px 10px #888888;">BEST KENYAN &#x1F1F0;&#x1F1EA; HISTORY IMAGES </h1> {%endblock%}
 
     {% block scripts %}
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
