--- a/photos/templates/home2.html
+++ b/photos/templates/home2.html
@@ -15,10 +15,16 @@
 </head>  
     <div class="container-fluid">
         <div class="row">
+            <ul class="list-inline">
+                <li class="list-inline-item">Locations</li>
+                {% for location in location %}
+                <li class="list-inline-item"><a href="/location/{{location.id}}">{{location.location}}</a></li>
+                {% endfor %}
+            </ul>
             {% for image in images %}
             {% if image.id > 12 and image.id <= 15 %}
             <div class="col-lg-4 col-lg-4 col-lg-4 padding-0 hover ">
-                <img src="{{image.image.url}}" class=" img img-responsive img-thumbnail" data-toggle="modal" data-target="#{{image.id}}">
+                <img src="{{image.image.url}}" class=" img img-responsive img-thumbnail" style="height: 350px; width:450px; margin-bottom: 10px; padding: 10px;box-shadow: 5px 10px #888888;" data-toggle="modal" data-target="#{{image.id}}">
             </div>
             <div class="modal fade" id="{{image.id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered" role="document">
